@@ -80,8 +80,7 @@ Menu comment
 </pre></th></tr><tr><td align="left" valign="top"><a href="info.html#Top">&bull; (info)</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"> before verbatim <pre class="verbatim">some @ verb{' atim
 * (texinfo):: in @ verbatim
 </pre></td></tr>
-<tr><td align="left" valign="top"><a href="manual2.html#Top">&bull; (manual2)</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"> $<i></i>
-</td></tr>
+<tr><td align="left" valign="top"><a href="manual2.html#Top">&bull; (manual2)</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"> $<i></i></td></tr>
 <tr><th colspan="3" align="left" valign="top"><pre class="menu-comment">Log$
 </pre></th></tr><tr><td align="left" valign="top"><a href="truc.html#Top">&bull; (truc)</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"> <acronym>description
 acronym</acronym>
