@@ -71,8 +71,7 @@ Menu comment
 comment
 <a href="info.html#Top">&bull; (info)</a>:: before verbatim </pre><pre class="verbatim">some @ verb{' atim
 * (texinfo):: in @ verbatim
-</pre><pre class="menu-preformatted"><a href="manual2.html#Top">&bull; (manual2)</a>:: $<i></i>
-Log$
+</pre><pre class="menu-preformatted"><a href="manual2.html#Top">&bull; (manual2)</a>:: $<i></i>Log$
 <a href="truc.html#Top">&bull; (truc)</a>:: <acronym>description
 acronym</acronym>
 </pre><p>After menu
