@@ -177,21 +177,18 @@ of line.
 </pre>
 
 <p>Now html  <b>
-some html </b> 
- bidule ignored
+some html </b>  bidule ignored
 </p>
 <p>@end html begins the line, and there must be exactly one space between @end
 and html and thing following @end html are ignored in info. Strangely
 the empty line following @end html is ignored but spaces are inserted.
 </p>
 <p>Now html valid for TeX  <b>
-some html </b> 
-Some text one the line following @end html
+some html </b> Some text one the line following @end html
 </p>
 <p>And html on it's own line
 </p>
 <tt> an html tt</tt>
-
 
 <p>A sc: <small>IEEE</small>, and another one in example:
 </p><table><tr><td>&nbsp;</td><td><pre class="example">AEEI
