@@ -45,8 +45,7 @@ ul.toc {list-style: none}
 <h1 class="node"> Top </h1>
 
 <table class="menu" border="0" cellspacing="0">
-<tr><td align="left" valign="top"><a href="gcc.html#Top">&bull; (gcc)</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"> bidule
-</td></tr>
+<tr><td align="left" valign="top"><a href="gcc.html#Top">&bull; (gcc)</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"> bidule</td></tr>
 </table>
 
 <p>Some text.
